--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
   "name": "estrutura_node_api",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/app.js",
   "author": "valdir-ti <valdir.ti@gmail.com>",
   "license": "MIT",
+  "scripts":{
+    "dev": "nodemon src/server.js"
+  },
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4",
+    "sucrase": "^3.15.0"
   }
 }
