--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "main": "src/app.js",
   "author": "valdir-ti <valdir.ti@gmail.com>",
   "license": "MIT",
-  "scripts":{
+  "scripts": {
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "eslint": "^7.9.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.0",
     "nodemon": "^2.0.4",
     "sucrase": "^3.15.0"
   }
