--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "sequelize": "^6.3.5"
   },
   "devDependencies": {
     "eslint": "^7.9.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.0",
     "nodemon": "^2.0.4",
+    "sequelize-cli": "^6.2.0",
     "sucrase": "^3.15.0"
   }
 }
