--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "mysql2": "^2.1.0",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
