--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.1.0",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "eslint": "^7.9.0",
