--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
     "mysql2": "^2.1.0",
     "sequelize": "^6.3.5",
     "yup": "^0.29.3"
